k8s/deployment.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: moleculer
  labels:
    namespace: moleculer
    goldilocks.fairwinds.com/enabled: "true"
---
apiVersion: v1
kind: Service
metadata:
  name: ouistity
  namespace: moleculer
  labels:
    app: ouistity
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app: ouistity
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: ouistity
  namespace: moleculer
spec:
  selector:
    matchLabels:
      app: ouistity
  template:
    metadata:
      labels:
        app: ouistity
    spec:
      securityContext:
        fsGroup: 1000
      containers:
        - name: ouistity
          image: shokohsc/ouistity
          securityContext:
            runAsUser: 1000
            runAsGroup: 1000
          args:
            - services
          ports:
            - name: http
              containerPort: 5000
              protocol: TCP
          volumeMounts:
            - name: nfs-shared
              mountPath: /usr/app/assets/data/weekly
        - name: mongodb
          image: bitnami/mongodb:4.4
          ports:
            - name: mongodb
              containerPort: 27017
              protocol: TCP
        - name: nats
          image: nats:2.2.0-alpine
          args:
            - "--debug"
            - "--cluster"
            - "nats://0.0.0.0:6222"
            - "--http_port"
            - "8222"
            - "--port"
            - "4222"
          ports:
            - name: nats
              containerPort: 4222
              protocol: TCP
      volumes:
        - name: nfs-shared
          nfs:
            server: nfs-shared.nfs-shared
            path: /weekly
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ouistity
  namespace: moleculer
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: ca-cluster-issuer
    forecastle.stakater.com/expose: "true"
    forecastle.stakater.com/group: home
    forecastle.stakater.com/appName: ouistity
spec:
  rules:
  - host: ouistity.shokohsc.home
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: ouistity
            port:
              number: 80
  tls:
  - hosts:
    - ouistity.shokohsc.home
    secretName: ouistity-cert
